@@ -40,6 +40,7 @@ proftpd-dfsg (1.3.5a-2) UNRELEASED; urgency=medium
     - remove "-l option" from dh_shlibdeps call
     - install init script and defaults file using dh_installinit
     - Some files in clean target are removed using debian/clean
+    - install files using dh_auto_install, do not strip during installation
 
   [1] https://lists.debian.org/debian-devel-announce/2016/11/msg00001.html
 
